[package]
name = "wolkenspeicher"
version = "0.1.0"
edition = "2021"
authors = [
  "Pascal Behmenburg <info@pascalbehmenburg.de>",
  "Jonas Lauschke <natrocx@protonmail.ch>",
]
license = "AGPL-3.0-only"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
chrono = "0.4.19"
uuid = "0.8.2"
